Fix caret border vertical alignment

--- a/src/index.css
+++ b/src/index.css
@@ -75,23 +75,23 @@ body {
   border-width: 7px 7px 7px 0;
   border-right-color: #ffffff;
   left: -6px;
-  top: 1px;
+  top: 0;
 }
 .tippy-box[data-theme~='biotutor'][data-placement^='left'] > .tippy-arrow::after {
   border-width: 7px 0 7px 7px;
   border-left-color: #ffffff;
   right: -6px;
-  top: 1px;
+  top: 0;
 }
 .tippy-box[data-theme~='biotutor'][data-placement^='bottom'] > .tippy-arrow::after {
   border-width: 0 7px 7px;
   border-bottom-color: #ffffff;
   top: -6px;
-  left: 1px;
+  left: 0;
 }
 .tippy-box[data-theme~='biotutor'][data-placement^='top'] > .tippy-arrow::after {
   border-width: 7px 7px 0;
   border-top-color: #ffffff;
   bottom: -6px;
-  left: 1px;
+  left: 0;
 }
